--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,24 @@
 		</h1>
 		</section>
 	</aside>
+	<div class="col-md-8">
+		<% if @user.microposts.any? %>
+		<h3>Microposts (<%= @user.microposts.count %>)</h3>
+		<ol class="microposts">
+		<%= render @microposts %>
+		</ol>
+		<%= will_paginate @microposts %>
+		<% end %>
+	</div>
+
+	<div class="col-md-8">
+		<% if @user.artworks.any? %>
+		<h3>Artworks (<%= @user.artworks.count %>)</h3>
+		<ol class="microposts">
+		<%= render @artworks %>
+		</ol>
+		<%= will_paginate @artworks %>
+		<% end %>
+	</div>
+
 </div>
